fix: text wrapping

--- a/templates/1/css/default.css
+++ b/templates/1/css/default.css
@@ -1090,6 +1090,7 @@ p + p {
 
 .is-wrapped {
     flex-wrap: wrap;
+    display: flex;
 }
 
 .cast > img {
